# SLAMForge

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  README_ch.md  THIRD_PARTY_NOTICES.md  build.sh  conanfile.py  requirements.txt
.github/workflows/: build.yml  desktop.yml  docker.yml  docs.yml  lint.yml  release.yml
apps/: CMakeLists.txt  litevo_cli.cpp  litevo_ros_node.cpp  slamforge_cli.cpp  slamforge_ros_node.cpp
apps/desktop/: main.cpp  main_window.cpp  main_window.h  map_view.cpp  map_view.h
build_clang/tests/unit/: test_feature_grid
build_lint/include/litevo/: version.h
cmake/: CompilerWarnings.cmake  FindFBOW.cmake  FindONNXRuntime.cmake  FindSophus.cmake  SLAMForgeConfig.cmake.in  litevoConfig.cmake.in
config/: default.yaml  euroc.yaml  kitti.yaml  tum_mono_sequence01_rectified.yaml
docker/: Dockerfile  devcontainer.json  docker-compose.yaml
docs/: architecture.md  desktop.md  quick_start.md  tuning_guide.md
docs/releases/: v3.1.0-beta.1.md  v3.1.0-beta.2.md  v3.2.0-beta.1.md  v3.2.0-beta.2.md
include/litevo/: litevo.h  version.h.in
include/litevo/base/: exception.h
include/litevo/core/: camera.h  config.h  feature_grid.h  frame.h  keyframe.h  map.h  map_point.h  types.h
include/litevo/features/: orb_extractor.h
include/litevo/geometry/: epipolar.h  pnp.h  se3.h  sim3.h  triangulation.h
include/litevo/loop_closing/: corrector.h  detector.h  global_ba.h  loop_closing.h  pose_graph.h  verifier.h  vocabulary.h
include/litevo/mapping/: local_mapper.h
include/litevo/optimization/: ba.h
include/litevo/tracking/: initializer.h  matcher.h  tracker.h
include/slamforge/: slamforge.h  version.h.in
include/slamforge/base/: exception.h
include/slamforge/core/: camera.h  config.h  feature_grid.h  frame.h  keyframe.h  map.h  map_point.h  types.h
include/slamforge/features/: orb_extractor.h
include/slamforge/geometry/: epipolar.h  pnp.h  se3.h  sim3.h  triangulation.h
include/slamforge/io/: map_export.h
include/slamforge/loop_closing/: corrector.h  detector.h  global_ba.h  loop_closing.h  pose_graph.h  verifier.h  vocabulary.h
include/slamforge/mapping/: dense_mapper.h  local_mapper.h
include/slamforge/optimization/: ba.h
include/slamforge/tracking/: initializer.h  matcher.h  tracker.h
legacy/: CMakeLists.txt
legacy/app/: main.cpp
legacy/include/deepvo/: backend.h  tracker.h  visualizer.h
legacy/include/deepvo/geometry/: epipolar.h
legacy/scripts/: run.sh  viewer_3d.py
legacy/src/: backend.cpp  tracker.cpp  visualizer.cpp
legacy/src/geometry/: epipolar.cpp
packaging/licenses/: Depth-Anything-V2.txt
packaging/linux/: org.slamforge.SLAMForge.appdata.xml  org.slamforge.SLAMForge.desktop  package-appimage.sh
packaging/windows/: README.txt  package.ps1  vcpkg.json
pybind/: CMakeLists.txt  README.md  __init__.py  litevo_bindings.cpp  pyproject.toml  slamforge_bindings.cpp
pybind/litevo/: __init__.py
pybind/slamforge/: __init__.py
src/: CMakeLists.txt  version.cpp
src/core/: camera.cpp  config.cpp  feature_grid.cpp  frame.cpp  keyframe.cpp  map.cpp  map_point.cpp
src/features/: orb_extractor.cpp
src/geometry/: epipolar.cpp  pnp.cpp  se3.cpp  sim3.cpp  triangulation.cpp
src/io/: map_export.cpp
src/loop_closing/: corrector.cpp  detector.cpp  global_ba.cpp  loop_closing.cpp  pose_graph.cpp  verifier.cpp  vocabulary.cpp
src/mapping/: dense_mapper.cpp  local_mapper.cpp
src/optimization/: ba.cpp  ceres_compat.h
src/tracking/: initializer.cpp  matcher.cpp  tracker.cpp
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  bench_orb.cpp  bench_pnp.cpp  bench_triangulation.cpp
tests/data/: zero_variance_estimated.tum  zero_variance_groundtruth.tum
tests/data/desktop-result/: map.ply  trajectory.txt
tests/packaging/consumer/: CMakeLists.txt  main.cpp
tests/python/: test_trajectory_io.py
tests/unit/: CMakeLists.txt  test_ba.cpp  test_camera.cpp  test_config.cpp  test_core_types.cpp  test_dense_mapper.cpp  test_feature_grid.cpp  test_frame.cpp  test_keyframe.cpp  test_local_mapper.cpp  test_loop_closing.cpp  test_map.cpp  test_map_export.cpp  test_matcher.cpp  test_se3.cpp  test_sim3.cpp  test_tracking_initialization.cpp  test_triangulation.cpp
tools/: benchmark.py  evaluate_ate.py  evaluate_rpe.py  plot_trajectory.py  trajectory_io.py
